Add Cutomer object fields
Add:
Zip Code,
Address,
Country
City

--- a/layouts/Room__c-Room Layout.layout-meta.xml
+++ b/layouts/Room__c-Room Layout.layout-meta.xml
@@ -15,7 +15,7 @@
                 <field>Type_of_Rooms__c</field>
             </layoutItems>
             <layoutItems>
-                <behavior>Edit</behavior>
+                <behavior>Required</behavior>
                 <field>Price__c</field>
             </layoutItems>
             <layoutItems>
